--- a/views/business/login.handlebars
+++ b/views/business/login.handlebars
@@ -36,7 +36,7 @@
       <div class = "collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar-landing-padding">
           <li>
-            <a href="/register" class="page-scroll" style="color: #00cccc;">Register</a>
+            <a href="/register" class="page-scroll" style="color: #ffae00;">Register</a>
           </li>
         </ul>
       </div>
