--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -47,7 +47,7 @@
           </li>
 
           <li>
-            <a class="page-scroll" href="#testimonial_blk">Testimonials</a>
+            <a class="page-scroll" href="#testimonial_blk">Testimonial</a>
           </li>
 
           <li>
@@ -60,7 +60,7 @@
 
           <li>
             <!--<button type = "button" class = "btn btn-default navbar-btn">Navbar Button</button>-->
-            <a href="/login" class="page-scroll" style="color: #00cccc;">Log In</a>
+            <a href="/login" class="page-scroll" style="color: #ffae00;">Log In</a>
             <!--<a href="/login" class="btn custom-button page-scroll navbar-btn" id="login-btn-navbar">Log In</a>-->
           </li>
         </ul>
@@ -71,10 +71,9 @@
   <header>
     <div class="header-content">
       <div class="header-content-inner">
-        <p></p>
         <h1>The Old Rules Of Waiting Are Over.</h1>
-        <p></p>
-        <p style ="color: #000">Let us help you revolutionize your patient waiting experience with effortless check-in, form management, arrival notification, and appointment integration for your office.</p>
+        <hr>
+        <p>Let us help you revolutionize your patient waiting experience with effortless check-in, form management, arrival notification, and appointment integration for your office.</p>
         <a href="/register" class="btn btn-primary btn-xl page-scroll tryBtn" onclick="tryClick()">Try It Today</a>
       </div>
     </div>
@@ -87,6 +86,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1>OVERVIEW</h1>
+          <hr id="custom_hr">
         </div>
       </div>
 
@@ -94,7 +94,7 @@
 
         <div class="col-sm-3 text-center">
           <h4>Sign Up For An Account</h4>
-          <i class="fa fa-pencil-square-o fa-5x" style="color:#00cccc; font-size: 1.2cm"></i>
+          <i class="fa fa-pencil-square-o fa-5x" style="color:#ffae00"></i>
           <br><br>
           <p class="overviewColor align-overview-mobile">
             Quickly and easily sign up an account with Enque.
@@ -103,7 +103,7 @@
 
         <div class="col-sm-3 text-center">
           <h4>Customize Your Own Forms </h4>
-          <i class="fa fa-file-text-o fa-5x" style="color:#00cccc; font-size: 1.2cm"></i>
+          <i class="fa fa-file-text-o fa-5x" style="color:#ffae00"></i>
           <br><br>
           <p class="overviewColor align-overview-mobile">
             Start off by generating a personal check in form for your company by simply dragging and dropping boxes and buttons.
@@ -112,7 +112,7 @@
 
         <div class="col-sm-3 text-center">
           <h4>Deploy Onto Device </h4>
-          <i class="fa fa-tablet fa-5x" style="color:#00cccc; font-size: 1.2cm"></i>
+          <i class="fa fa-tablet fa-5x" style="color:#ffae00"></i>
           <br><br>
           <p class="overviewColor align-overview-mobile">
             Deploy your form on any device with a browser. Tablets and mobile devices are also supported.
@@ -121,7 +121,7 @@
 
         <div class="col-sm-3 text-center">
           <h4>Manage Your Customers </h4>
-          <i class="fa fa-users fa-5x" style="color: #00cccc; font-size: 1.5cm"></i>
+          <i class="fa fa-users fa-5x" style="color: #ffae00;"></i>
           <br><br>
           <p class="overviewColor align-overview-mobile">
             Our system will begin assisting you in keeping track of appointments and help manage your customers.
@@ -133,16 +133,15 @@
   </section>
 
   <!-- Testimonials-->
-  <section id="testimonial_blk" style="background-color: #00cccc;">
+  <section id="testimonial_blk" style="background-color: #ffae00;">
     <div class="container">
 
-      <div class = "row">
+      <div class = "row rowPadding">
         <div class="col-lg-12 text-center">
-          <h1 id="h1Custom">TESTIMONIALS</h1>
+          <h1 id="h1Custom">Testimonials</h1>
+          <hr id="custom_hr2">
         </div>
       </div>
-
-      <div class = "row rowPadding">
 
       <div id="testimonial_Carousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -156,21 +155,24 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="http://i86.photobucket.com/albums/k98/duhfuhbihh/t1_zpsywdgxo8j.png" alt="Review1">
+            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review1_zpsyjcrug77.jpg" alt="Review1">
           </div>
 
           <div class="item">
-            <img src="http://i86.photobucket.com/albums/k98/duhfuhbihh/t2_zpsbk431o0b.png" alt="Review2">
+            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review4_zpsxjfaxaed.jpg" alt="Review2">
           </div>
 
           <div class="item">
-            <img src="http://i86.photobucket.com/albums/k98/duhfuhbihh/t3_zpsz9t1dymm.png" alt="Review3">
+            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review3_zpseo2hjc7o.jpg" alt="Review3">
           </div>
 
           <div class="item">
-            <img src="http://i86.photobucket.com/albums/k98/duhfuhbihh/t4_zps5nznmjp5.png" alt="Review4">
+            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review2_zpsdhgb9ulw.jpg" alt="Review4">
           </div>
 
+          <div class="item">
+            <img src="http://i25.photobucket.com/albums/c97/evilsmith/review3_zpseo2hjc7o.jpg" alt="Review3">
+          </div>
         </div>
 
         <!-- Controls -->
@@ -181,7 +183,6 @@
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
-      </div>
     </div>
   </section>
 
@@ -189,7 +190,8 @@
     <div class="container">
       <div class = "row rowPadding">
         <div class="col-lg-12 text-center">
-          <h1>PRICING</h1>
+          <h1>Pricing</h1>
+          <hr id="custom_hr">
         </div>
       </div>
     </div>
@@ -202,15 +204,20 @@
       <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
         <div class="panel price panel-green">
           <div class="panel-heading arrow_box text-center">
-            <h3 style ="font-size:20px">FREE TRIAL<p style ="font-size:12px">$0 / month</p></h3>
+            <h3>FREE TRIAL</h3>
+          </div>
+
+          <!--Pricing-->
+          <div class="panel-body text-center">
+            <p class="lead" style="font-size:40px"><strong>$0 / month</strong></p>
           </div>
 
           <!-- Features -->
           <ul class="list-group list-group-flush text-center">
-            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i> Customize Forms</li>
-            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i> Unlimited Employees</li>
-            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i> Unlimited Devices</li>
-            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i> 24/7 support</li>
+            <li class="list-group-item"><i class="fa fa-check" id="chartCheck"></i>Customize Forms</li>
+            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i>Unlimited Employees</li>
+            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i>Unlimited Devices</li>
+            <li class="list-group-item"><i class="fa fa-times" id="chartX"></i>24/7 support</li>
           </ul>
 
           <!-- Button (Currently no function) -->
@@ -222,9 +229,13 @@
       <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
         <div class="panel price panel-red">
           <div class="panel-heading  text-center">
-            <h3 style ="font-size:20px">PREMIUM<p style ="font-size:12px">$10 / month</p></h3>
+            <h3>PREMIUM</h3>
           </div>
 
+          <!--Cost-->
+          <div class="panel-body text-center">
+            <p class="lead" style="font-size:40px"><strong>$10 / month</strong></p>
+          </div>
 
           <!-- Features -->
           <ul class="list-group list-group-flush text-center">
@@ -247,11 +258,12 @@
   </section>
 
   <!--Contact Form-->
-  <section id = "contact_us" style="background-color: #00cccc;">
+  <section id = "contact_us" style="background-color: #ffae00;">
     <div class="container">
       <div class = "row rowPadding">
         <div class="col-lg-12 text-center">
-          <h1 id="h1Custom">CONTACT US!</h1>
+          <h1 id="h1Custom">Contact Us!</h1>
+          <hr id="custom_hr2">
         </div>
       </div>
     </div>
@@ -262,7 +274,7 @@
           <fieldset>
             <!-- Text input-->
             <div class="form-group">
-              <label class="col-md-3 control-label"></label>
+              <label class="col-md-3 control-label">Name</label>
 
               <div class="col-md-6 inputGroupContainer">
                 <div class="input-group">
@@ -276,7 +288,7 @@
             <!-- Text input-->
             <div class="form-group">
 
-              <label class="col-md-3 control-label"></label>
+              <label class="col-md-3 control-label">E-Mail</label>
 
               <div class="col-md-6 inputGroupContainer">
 
@@ -290,7 +302,7 @@
 
             <!-- Text area -->
             <div class="form-group">
-              <label class="col-md-3 control-label"></label>
+              <label class="col-md-3 control-label">Message</label>
               <div class="col-md-6 inputGroupContainer">
                 <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
@@ -323,17 +335,17 @@
     <div class = "container">
       <div class = "row">
         <div class = "footer-col col-md-4">
-          <h3 id="format_Footer_h3">CONTACT INFORMATION</h3>
+          <h3 id="format_Footer_h3">Contact Information</h3>
           <p>University of California, San Diego
             <br>
             9500 Gilman Dr, La Jolla, CA 92093
             <br>
-            (858) 534-2230
+            (858)534-2230
           </p>
         </div>
 
         <div class = "footer-col col-md-4">
-          <h3 id="format_Footer_h3">SOCIAL MEDIA</h3>
+          <h3 id="format_Footer_h3">Social Media</h3>
           <ul class="list-inline">
             <li>
               <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -351,8 +363,8 @@
         </div>
 
         <div class = "footer-col col-md-4">
-          <h3 id="format_Footer_h3">ABOUT OUR TEAM</h3>
-          <p>team tee-bee-dee is a development team formed in <br>CSE 112 at UC San Diego. </p>
+          <h3 id="format_Footer_h3">About Team Fubar</h3>
+          <p>Team Fubar is a development team formed in <a href="http://classes.pint.com/cse112/">CSE 112</a> at UC San Diego. </p>
         </div>
       </div>
     </div>
@@ -362,7 +374,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          Copyright &copy; team tee-bee-dee, CSE 112 Spring 2017. All Rights Reserved.
+          Copyright &copy; Team Fubar, CSE 112 Winter 2016. All Rights Reserved.
         </div>
       </div>
     </div>
