redesigned login and reg page

--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -81,16 +81,16 @@
   </header>
 
   <!-- Overview -->
-  <section id="overview">
+  <section id="overview" style="margin-top:-60px; padding-top: 60px;">
     <div class = "container">
-
+      <div class = "row rowPadding">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1>OVERVIEW</h1>
         </div>
       </div>
 
-      <div class = "row rowPadding">
+
 
         <div class="col-sm-3 text-center">
           <h4>Sign Up For An Account</h4>
@@ -133,17 +133,15 @@
   </section>
 
   <!-- Testimonials-->
-  <section id="testimonial_blk" style="background-color: #00cccc;">
+  <section id="testimonial_blk" style="background-color: #00cccc; margin-top:0px; padding-top: 30px;">
     <div class="container">
+      <div class = "row rowPadding">
 
-      <div class = "row">
         <div class="col-lg-12 text-center">
           <h1 id="h1Custom">TESTIMONIALS</h1>
         </div>
       </div>
-
-      <div class = "row rowPadding">
-
+</div>
       <div id="testimonial_Carousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -181,11 +179,10 @@
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
-      </div>
-    </div>
+
   </section>
 
-  <section id="pricing">
+  <section id="pricing" style="margin-top:-60px; padding-top: 60px;">
     <div class="container">
       <div class = "row rowPadding">
         <div class="col-lg-12 text-center">
