--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,7 @@
   width: 100%;
 }
 
+
 .welcome-message {
   margin: 0;
   padding: 12px;
@@ -15,7 +16,6 @@
 .header {
   position: relative;
   width: 100%;
-
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -165,6 +165,7 @@
   font-family: "Open Sans","Helvetica Neue",Arial,sans-serif;
   font-weight: 700;
   text-transform: uppercase;
+
 }
 .navbar-default .navbar-brand {
   color: #00cccc;
@@ -313,7 +314,7 @@ h1, .h1, h4{
 }
 
 #intro-image {
-    //margin-left: 100px;
+    margin-left: 100px;
     position: absolute;
     left: 30%;
     width:500px;
