--- a/views/business/login.handlebars
+++ b/views/business/login.handlebars
@@ -8,7 +8,7 @@
 
   <!--Local Unviersal Stylesheet-->
   <!--link rel='stylesheet' href='/stylesheets/style.css'-->
-  <link rel='stylesheet' href='/stylesheets/landingStyle.css'/>
+  <link rel='stylesheet' href='/stylesheets/loginAndReg.css'/>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -46,14 +46,16 @@
   <header>
     <div class="header-content">
       <form class="form-horizontal" action="login" method="post">
+        <div class ="form-title">
+          <h1>ENQUÉ</h1>
+
+        </div>
         <div class="form-group">
-          <label for="email" class="control-label">Email</label>
           <div class="">
             <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
           </div>
         </div>
         <div class="form-group">
-          <label for="password" class="control-label">Password</label>
           <div class="">
             <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
           </div>
@@ -74,7 +76,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            Copyright &copy; Team Fubar, CSE 112 Winter 2016. All Rights Reserved.
+            Copyright &copy; Team tee-bee-dee, CSE 112 Spring 2017. All Rights Reserved.
           </div>
         </div>
       </div>
