--- a/views/business/register.handlebars
+++ b/views/business/register.handlebars
@@ -4,7 +4,7 @@
   <title>{{ title }}</title>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <link rel='stylesheet' href='/stylesheets/landingStyle.css'/>
+  <link rel='stylesheet' href='/stylesheets/loginAndReg.css'/>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -41,8 +41,8 @@
   </nav>
   <header>
     <div class="header-content col-xs-4">
-      <h2 class="regTitleColor">Create an Account</h2>
-      <form  method="post" action="" enctype="application/x-www-form-urlencoded">
+      <form class="form-horizontal" method="post" action="" enctype="application/x-www-form-urlencoded">
+       <h2 class="regTitleColor">CREATE AN ACCOUNT</h2>
         <input class="regis centerForm" type="text" name="companyName" value="{{ companyName }}" placeholder="COMPANY NAME" required>
         <input class="regis centerForm" type="text" name="fname" value="{{ fname }}" placeholder="FIRST NAME" required>
         <input class="regis centerForm" type="text" name="lname" value="{{ lname }}" placeholder="LAST NAME" required>
@@ -58,7 +58,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            Copyright &copy; Team Fubar, CSE 112 Winter 2016. All Rights Reserved.
+            Copyright &copy; Team tee-bee-dee, CSE 112 Spring 2017. All Rights Reserved.
           </div>
         </div>
       </div>
