--- a/public/stylesheets/skins/custom-skin.css
+++ b/public/stylesheets/skins/custom-skin.css
@@ -2,7 +2,7 @@
  * Skin: Blue
  * ----------
  */
-.skin-blue .main-header .navbar {
+.custom-skin .main-header .navbar {
   background-color: #3c8dbc;
 }
 .skin-blue .main-header .navbar .nav > li > a {
@@ -43,7 +43,7 @@
   }
 }
 .skin-blue .main-header .logo {
-  background-color: #00cccc;
+  background-color: #367fa9;
   color: #ffffff;
   border-bottom: 0 solid transparent;
 }
@@ -59,7 +59,7 @@
 .skin-blue .wrapper,
 .skin-blue .main-sidebar,
 .skin-blue .left-side {
-  background-color: #071C33;
+  background-color: #222d32;
 }
 .skin-blue .user-panel > .info,
 .skin-blue .user-panel > .info > a {
@@ -67,7 +67,7 @@
 }
 .skin-blue .sidebar-menu > li.header {
   color: #4b646f;
-  background: #1a2226;
+  background: #071C33;
 }
 .skin-blue .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -75,7 +75,7 @@
 .skin-blue .sidebar-menu > li:hover > a,
 .skin-blue .sidebar-menu > li.active > a {
   color: #ffffff;
-  background: #1e282c;
+  background: #071C33;
   border-left-color: #3c8dbc;
 }
 .skin-blue .sidebar-menu > li > .treeview-menu {
