--- a/views/business/addemployees.handlebars
+++ b/views/business/addemployees.handlebars
@@ -52,7 +52,7 @@
   <div class="col-md-6">
     <div class="box box-success">
       <div class="box-header with-border">
-        <h3 class="box-title">Employees - registered</h3>
+        <h3 class="box-title">Employees (Registered)</h3>
       </div>
       <div class="box-body">
         <table class="table table-striped" id="registeredEmployees">
@@ -78,7 +78,7 @@
   <div class="col-md-6">
     <div class="box box-danger">
       <div class="box-header with-border">
-        <h3 class="box-title">Employees - not registered</h3>
+        <h3 class="box-title">Employees (Not registered)</h3>
       </div>
       <div class="box-body">
         <table class="table table-striped" id="notRegisteredEmployees">
