--- a/views/partials/styles.handlebars
+++ b/views/partials/styles.handlebars
@@ -11,6 +11,6 @@
 <!-- AdminLTE Skins. Choose a skin from the css/skins
 folder instead of downloading all of them to reduce the load. -->
 
-<link rel="stylesheet" href="/stylesheets/skins/_all-skins.min.css">
+<link rel="stylesheet" href="/stylesheets/skins/_all-skins.css">
 <link rel="stylesheet" href="/stylesheets/style.css">
 
