--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -1,7 +1,7 @@
 <section class="content-header">
   <h1>Settings </h1>
-  <h1 class="" id="currentDate"></h1>
-  <div id="txt" class=""></div>
+  <div id="txt" class="pull-right"></div>
+  <h1 class="pull-right" id="currentDate"></h1>
 </section>
 <section class="content">
   <div class="row" style="">
@@ -29,10 +29,10 @@
   </div>
   <!-- Row 1 -->
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class='box-title'>Change Password</h3>
+          <h3 class='box-title'>CHANGE PASSWORD</h3>
         </div>
         <form class="" action="" method="post">
           <div class="box-body">
@@ -58,10 +58,10 @@
   </div>
 
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class="box box-primary">
         <div class="box-header with-border" >
-          <h3 class='box-title'>Update Contact Information</h3>
+          <h3 class='box-title'>UPDATE CONTACT INFO</h3>
         </div>
         <form class="" action="" method="post">
           <div class='box-body'>
@@ -89,10 +89,10 @@
   {{#if isAdmin}}
   <!-- ROW 2 -->
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class ="box box-primary">
         <div class="box-header with-border">
-          <h3 class='box-title'>Upload a New Logo</h3>
+          <h3 class='box-title'>UPLOAD NEW LOGO</h3>
           <p style="color:grey">Upload your own logo to match your office.</p>
         </div>
         <form id="uploadForm" enctype="multipart/form-data" action="/uploadlogo" method="post">
@@ -130,10 +130,10 @@
   <!-- Change sign-in background color -->
 
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class='box-title'>Change Sign-in Background Color</h3>
+          <h3 class='box-title'>CHANGE BACKGROUND COLOR</h3>
           <p style="color:grey">Pick a background color for your sign-in page to match your office.</p>
         </div>
         <form class="" action="/signinbackground" method="post">
@@ -152,10 +152,10 @@
   <!-- Row 4 -->
   <!-- Change company info -->
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class="box box-primary">
         <div class="box-header with-border" >
-          <h3 class='box-title'>Company Info</h3>
+          <h3 class='box-title'>COMPANY INFO</h3>
           <p style="color:grey">Configure other parts of your company account.</p>
         </div>
         <form class="" action="/businesssetting" method="post">
