--- a/apidoc/css/style.css
+++ b/apidoc/css/style.css
@@ -47,6 +47,15 @@ h2 {
   padding: 0;
 }
 
+h1-alt {
+  font-family: "Source Sans Pro Semibold", sans-serif;
+  font-size: 80px;
+  line-height: 50px;
+  margin: 0 0 10px 0;
+  padding: 0;
+  letter-spacing:1px; 
+  font-weight:400;
+}
 section {
   border-top: 1px solid #ebebeb;
   padding: 30px 0;
