--- a/public/stylesheets/skins/_all-skins.css
+++ b/public/stylesheets/skins/_all-skins.css
@@ -3,7 +3,7 @@
  * ----------
  */
 .skin-blue .main-header .navbar {
-  background-color: #3c8dbc;
+  background-color: #2c3b41;
 }
 .skin-blue .main-header .navbar .nav > li > a {
   color: #ffffff;
@@ -29,7 +29,7 @@
   color: #fff;
 }
 .skin-blue .main-header .navbar .sidebar-toggle:hover {
-  background-color: #367fa9;
+  background-color: #374850;
 }
 @media (max-width: 767px) {
   .skin-blue .main-header .navbar .dropdown-menu li.divider {
@@ -39,19 +39,21 @@
     color: #fff;
   }
   .skin-blue .main-header .navbar .dropdown-menu li a:hover {
-    background: #367fa9;
+    background: #00cccc;
   }
 }
 .skin-blue .main-header .logo {
-  background-color: #367fa9;
+  background-color: #00cccc;
   color: #ffffff;
   border-bottom: 0 solid transparent;
+  letter-spacing: 2px; 
+  font-weight: 400;
 }
 .skin-blue .main-header .logo:hover {
-  background-color: #357ca5;
+  background-color: #00b3b3;
 }
 .skin-blue .main-header li.user-header {
-  background-color: #3c8dbc;
+  background-color: #00cccc;
 }
 .skin-blue .content-header {
   background: transparent;
@@ -75,8 +77,8 @@
 .skin-blue .sidebar-menu > li:hover > a,
 .skin-blue .sidebar-menu > li.active > a {
   color: #ffffff;
-  background: #1e282c;
-  border-left-color: #3c8dbc;
+  background: #374850;
+  border-left-color: #fff;
 }
 .skin-blue .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
