--- a/views/business/addemployees.handlebars
+++ b/views/business/addemployees.handlebars
@@ -1,5 +1,5 @@
 <section class="content-header">
-  <h1>Dashboard </h1>
+  <h1>EMPLOYEES</h1>
   <div id="txt" class="pull-right"></div>
   <h1 class="pull-right" id="currentDate"></h1>
 </section>
@@ -13,9 +13,6 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close add-employee-hide" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span></button>
-            <h4 class="modal-title">Add Employee</h4>
           </div>
           <div class="modal-body">
             <div class="row">
@@ -52,7 +49,7 @@
   <div class="col-md-6">
     <div class="box box-success">
       <div class="box-header with-border">
-        <h3 class="box-title">Employees (Registered)</h3>
+        <h3 class="box-title">REGISTERED</h3>
       </div>
       <div class="box-body">
         <table class="table table-striped" id="registeredEmployees">
@@ -78,7 +75,7 @@
   <div class="col-md-6">
     <div class="box box-danger">
       <div class="box-header with-border">
-        <h3 class="box-title">Employees (Not registered)</h3>
+        <h3 class="box-title">NOT REGISTERED</h3>
       </div>
       <div class="box-body">
         <table class="table table-striped" id="notRegisteredEmployees">
