slight changes to admin dashboard

--- a/views/business/dashboard-admin.handlebars
+++ b/views/business/dashboard-admin.handlebars
@@ -9,11 +9,11 @@
   {{/message}}
   <div class="row">
     {{#each businesses}}
-    <div class="col-md-12">
+    <div class="col-md-7">
       <div class="box box-warning box-solid">
         <div class="box-header with-border" data-widget="collapse">
           <i class="fa fa-minus" style="display: none"></i>
-          <h3 class="box-title">{{ companyName }}</h3>
+          <h3 class="box-title" style="font-weight: 600">{{ companyName }}</h3>
           <h3 class="box-title pull-right" style="pull-right">Pending</h3>
         </div><!-- /.box-header -->
         <div class="box-body">
@@ -43,11 +43,11 @@
     {{/each}}
   </div>
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-7">
       <div class="box box-danger box-solid">
         <div class="box-header with-border" data-widget="collapse">
           <i class="fa fa-minus" style="display: none"></i>
-          <h3 class="box-title">Pint 2.0</h3>
+          <h3 class="box-title" style="font-weight: 600">Pint 2.0</h3>
           <h3 class="box-title pull-right" style="pull-right">Late</h3>
         </div><!-- /.box-header -->
         <div class="box-body">
@@ -73,11 +73,11 @@
       </div><!-- /.box -->
     </div><!-- /.col -->
 
-    <div class="col-md-12">
+    <div class="col-md-7">
       <div class="box box-success box-solid">
         <div class="box-header with-border" data-widget="collapse">
           <i class="fa fa-minus" style="display: none"></i>
-          <h3 class="box-title">Fubar</h3>
+          <h3 class="box-title" style="font-weight: 600">Fubar</h3>
           <h3 class="box-title pull-right" style="pull-right">Paid</h3>
         </div> <!-- /.box-header -->
         <div class="box-body">
