--- a/views/business/registeremployees.handlebars
+++ b/views/business/registeremployees.handlebars
@@ -33,7 +33,7 @@
   <footer class="footer navbar-fixed-bottom">
     <div class="container">
       <ul class="list-inline footer-links text-center">
-        <li class = "footer-copyright">Copyright &#169; Gold Team-CSE 112, Winter 2015. All Rights Reserved.</li>
+        <li class = "footer-copyright">Copyright &#169; Team tee-bee-dee: CSE 112, Spring 2017. All Rights Reserved.</li>
       </ul>
     </div>
   </footer>
