--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <ul class="list-inline footer-links text-center">
-      <li class="footer-copyright">Copyright &#169; Gold Team-CSE 112, Winter 2015. All Rights Reserved.
+      <li class="footer-copyright">Copyright &#169; Team tee-bee-dee: CSE 112, Spring 2017. All Rights Reserved.
       </li>
     </ul>
   </div>
