allowed date and time input for schedule appt

--- a/views/business/scheduleappointment.handlebars
+++ b/views/business/scheduleappointment.handlebars
@@ -20,6 +20,10 @@
             <input type="inputEmail" id="inputEmail" name="inputEmail" class="form-control" required>
             <label for="inputPhone">Phone</label>
             <input type="phone" id="inputPhone" name="inputPhone" class="form-control" required>
+            <label for="inputDate">Date</label>
+            <input type="date" id="inputDate" name="inputDate" class="form-control" required>
+            <label for="inputTime">Time</label>
+            <input type="time" id="inputTime" name="inputTime" class="form-control" required>
             <label for="inputEmployee">Doctor</label>
             <select id="inputEmployee" name="inputEmployee" class="form-control">
               <option value="" selected disabled>Select Doctor</option>
