--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,6 +1,6 @@
 <header class="main-header">
   <!-- Logo -->
-  <a href="index2.html" class="logo">
+  <a href="/dashboard" class="logo">
     <span class="logo-mini"><b>A</b>LT</span>
     ENQUÉ
   </a>
