--- a/views/checkin/apptinfo.handlebars
+++ b/views/checkin/apptinfo.handlebars
@@ -45,7 +45,8 @@
             <h3 class="box-title">Please verify that the information below is correct.</h3>
           </div>
           <div class="box-body">
-            <h4 class="lead">Appointment Time: <b>10:00 AM</b></h4>
+            <h4 class="lead">Appointment Date: <b>{{ date }}</b></h4>
+            <h4 class="lead">Appointment Time: <b>{{ time }}</b></h4>
             <h4 class="lead">E-mail: <b>{{ email }}</b></h4>
             <br>
             <div class="row innerInfo">
