swapped positions of company list and analytics on peter dashboard

--- a/views/partials/analytics.handlebars
+++ b/views/partials/analytics.handlebars
@@ -1,7 +1,12 @@
 <!--Analytics-->
 <script src='/javascripts/analytics.js'></script>
-
+<section class="content-header">
+  <h1>Dashboard </h1>
+  <div id="txt" class="pull-right"></div>
+  <h1 class="pull-right" id="currentDate"></h1>
+</section>
 <div class="mixpanel-platform-body">
+  <h4>Website Analytics</h4>
   <div class="">
     <div id="eventSelect" style="float: left;"></div>
     <div id="by" class="mixpanel-platform-label" style="margin-left: 10px; display: none;">by</div>
